samples/_failures_safe/1761195302_83e569_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab928187.c: In function ‘main’:
./samples/SAFE/__tmp_ab928187.c:161:20: error: missing terminating " character
  161 |             printf("Matrix 1 columns must equal
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ab928187.c:161:13: error: expected expression at end of input
  161 |             printf("Matrix 1 columns must equal
      |             ^~~~~~
./samples/SAFE/__tmp_ab928187.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab928187.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab928187.c:161:13: error: expected declaration or statement at end of input
